Fix empty <title> placeholders breaking nearby placeholders

BUG: 483320
(cherry picked from commit 8d2e0641af5bda4b7684d8d3da176f71e8b5c523)